frontend refactored to 2 phase questions
